Fix/line breaks and overflow (#4138)

--- a/packages/plugin-headings/web/statics/styles/headings.scss
+++ b/packages/plugin-headings/web/statics/styles/headings.scss
@@ -31,9 +31,3 @@
     }
   }
 }
-
-.text-wrapper {
-  display: inline-block;
-  overflow-wrap: anywhere;
-}
-
