--- a/packages/tiptap-extensions/web/src/statics/styles.scss
+++ b/packages/tiptap-extensions/web/src/statics/styles.scss
@@ -119,8 +119,3 @@
     z-index: 10;
   }
 }
-
-.text-wrapper {
-  display: inline-block;
-  overflow-wrap: anywhere;
-}
